--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,11 @@ flutter:
         - asset: assets/fonts/Poppins-Regular.ttf
         - asset: assets/fonts/Poppins-Bold.ttf
 
+
+  assets:
+    - assets/icons/
+    - assets/images/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
